<resources>
    <string name="app_name">Motivation</string>
    <string name="utilizador">Utilizador</string>
    <string name="frase">Frase</string>
    <string name="nova_frase">Nova Frase</string>
    <string name="vamos_comecar">Vamos comecar?</string>
    <string name="qual_o_seu_nome">Qual é o seu Nome?</string>
    <string name="guardar">Guardar</string>
    <string name="todo">TODO</string>

</resources>